Border added to form input to prevent field "jumping" when error occurs

--- a/src/style/output.css
+++ b/src/style/output.css
@@ -799,6 +799,10 @@ video {
   border-color: rgb(239 68 68 / var(--tw-border-opacity)) !important;
 }
 
+.border-transparent {
+  border-color: transparent !important;
+}
+
 .bg-blue-dark {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(0 93 168 / var(--tw-bg-opacity)) !important;
